- In Editor Options, the "Symbol Completion" section has been moved to the "Code Completion" section.
- Completed closing symbols are now deleted when the corresponding opening character is deleted.
- Fixed a argument highlighting problem in the function tooltip.
- As of 5.6.0 RC1, a different completion cache file format is used. Older versions are not forward compatible.

Version 5.5.3 - 5 November 2013

- Fixed lib32, -m32 and gdb32 not being used by default by 32bit profiles.
- The function tooltip works again.
- The function tooltip hides again when its editor goes out of focus.
- Fixed a possible crash in the code completion window.
- Removed some superfluous spaces from variables found in argument lists.

Version 5.5.2 - 28 Oktober 2013

- Rewritten the help files.
- Fixed a bug in the shortcut editor window.
- Fixed a bug when closing an editor.
- Fixed a memory leak in the recent file list.
- Switching editors is a bit faster now (class browser is only redrawn once instead of twice).
- Fixed a crash in code completion caused by using mouseover hints at the same time.
- Fixed a timer leak (the "Not enough timers available" bug).
- Tidied up the File Properties window.
- Renamed the file renaming procedure (fixes the "Thread error 6" bug).
- Fixed a bug in the new project window.
- Fixed a bug in the short editor window.

Version 5.5.1 - 7 Oktober 2013

- When editing a file opened in Dev-C++ elsewhere, Dev will only show one messagebox informing you of the change.
- A bunch of bug fixes.

Version 5.5.0 - 6 Oktober 2013

- Dev-C++ can now parse C++ header files too.
- Clicking in the gutter does not change the caret position anymore.
- Mouseover hints are now also shown when hovering above #includes.
- Fixed editor closing not always remembering the previous tab.
- The matching brace highlighter now ignores text highlighted as 'Character'.
- Custom compiler commands are now added to the end of the call to GCC.